[BEAM-5058] Run basic ITs in Python Precommit

--- a/build.gradle
+++ b/build.gradle
@@ -234,6 +234,7 @@ task goIntegrationTests() {
 
 task pythonPreCommit() {
   dependsOn ":beam-sdks-python:preCommit"
+  dependsOn ":beam-sdks-python-precommit-dataflow:precommitIT"
 }
 
 task pythonPostCommit() {
