--- a/runners/google-cloud-dataflow-java/examples/build.gradle
+++ b/runners/google-cloud-dataflow-java/examples/build.gradle
@@ -64,21 +64,9 @@ task preCommitLegacyWorker(type: Test) {
   systemProperty "beamTestPipelineOptions", JsonOutput.toJson(preCommitBeamTestPipelineOptions)
 }
 
-task buildAndPushDockerContainer() {
-  dependsOn ":beam-sdks-java-container:docker"
-  doLast {
-    exec {
-      commandLine "docker", "tag", "${defaultDockerImageName}", "${dockerImageName}"
-    }
-    exec {
-      commandLine "gcloud", "docker", "--", "push", "${dockerImageContainer}"
-    }
-  }
-}
-
 task preCommitFnApiWorker(type: Test) {
   dependsOn ":beam-runners-google-cloud-dataflow-java-fn-api-worker:shadowJar"
-  dependsOn buildAndPushDockerContainer
+  dependsOn ":beam-runners-google-cloud-dataflow-java:buildAndPushDockerContainer"
 
   def dataflowWorkerJar = project.findProperty('dataflowWorkerJar') ?: project(":beam-runners-google-cloud-dataflow-java-fn-api-worker").shadowJar.archivePath
   def preCommitBeamTestPipelineOptions = [
@@ -106,13 +94,25 @@ task preCommit() {
 
 task preCommitPortabilityApi() {
   dependsOn preCommitFnApiWorker
-  // Clean up built images
+}
+
+// Clean up built images
+task cleanUpDockerImages() {
   doLast {
     exec {
       commandLine "docker", "rmi", "${dockerImageName}"
     }
     exec {
-      commandLine "gcloud", "--quiet", "container", "images", "delete", "${dockerImageName}"
+      commandLine "gcloud", "--quiet", "container", "images", "delete", "--force-delete-tags", "${dockerImageName}"
+    }
+  }
+}
+
+afterEvaluate {
+  // Ensure all tasks which use published docker images run before they are cleaned up
+  tasks.each { t ->
+    if (t.dependsOn.contains(":beam-runners-google-cloud-dataflow-java:buildAndPushDockerContainer")) {
+      t.mustRunAfter ":beam-runners-google-cloud-dataflow-java:cleanUpDockerImages"
     }
   }
 }
